<resources>
    <string name="app_name">Peñapp</string>
    <string name="btn_registration">Registro</string>
    <string name="btn_login">Login</string>
    <string name="txt_welcome">Bienvenido a Peñapp</string>
    <string name="txt_name">Nombre de usuario</string>
    <string name="edittxt_mail">E-mail</string>
    <string name="chb_admin">Administrador</string>
    <string name="edittxt_password">Contraseña</string>
    <string name="edittxt_repeat_password">Repita contraseña</string>
    <string name="btn_register_from_login">Si eres nuevo, regístrate</string>
    <string name="edittxt_club_name">Nombre de la Peña</string>
    <string name="edittxt_code">Código de ingreso</string>
    <string name="btn_has_code">Tengo un código de invitación</string>
    <string name="btn_create_club">Quiero crear una peña nueva</string>
    <string name="txtClubNameHome"></string>
    <string name="txtAmount">Saldo de la peña</string>
    <string name="txtUpcomingEvents">Próximos eventos</string>
    <string name="btnOrders">Pedidos</string>
    <string name="btnEvents">Eventos</string>
    <string name="btnFinances">Finanzas</string>
    <string name="btnLogout">Salir</string>
    <string name="btnOrder">Hacer un pedido</string>
    <string name="btnMyOrders">Mis pedidos</string>
    <string name="btnExit">Salir</string>
    <string name="btnNewEvent">Nuevo evento</string>
    <string name="btnMyEvents">Mis eventos</string>
    <string name="btnPastEvents">Eventos pasados</string>
    <string name="btnExitFromEvents">Salir</string>

    <string name="txtCategory">Categoría</string>
    <string name="txtDescription">Descripción</string>
    <string name="txtAmountOrder">Cantidad</string>
    <string name="btnOrderForm">Pedir</string>
    <string name="btnBack">Volver</string>
    <string name="btnPost">Publicar</string>
    <string name="btnBackEvents">Volver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>